add better plots

--- a/regression/end_to_end_indian_house_rent_regression.ipynb
+++ b/regression/end_to_end_indian_house_rent_regression.ipynb
@@ -487,6 +487,82 @@
   },
   {
    "cell_type": "markdown",
+   "id": "44372daf",
+   "metadata": {},
+   "source": [
+    "### 6.2.1 A 3D view (rent vs area vs area_rate)\n",
+    "\n",
+    "A 3D scatter can be a fun way to see how **two** inputs relate to rent at the same time.\n",
+    "Use it for intuition, not for precise conclusions."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9fbd44e9-c5f6-415d-a645-c5c762eb955f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import plotly\n",
+    "import plotly.io as pio\n",
+    "\n",
+    "print(\"Plotly version:\", plotly.__version__)\n",
+    "print(\"Available renderers:\", pio.renderers)\n",
+    "\n",
+    "# Best defaults for JupyterLab:\n",
+    "# Try one of these (first one usually works)\n",
+    "pio.renderers.default = \"notebook_connected\"   # good for JupyterLab + classic\n",
+    "#pio.renderers.default = \"jupyterlab\"         # works in some setups\n",
+    "#pio.renderers.default = \"iframe\"             # always works, slightly heavier\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "675d595d-81f1-4b48-8d52-c3bf901c73d2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import plotly.express as px\n",
+    "\n",
+    "# Prepare clean data for 3D visualization\n",
+    "cols3d = [\"area\", \"area_rate\", \"rent\"]\n",
+    "df3d = df[cols3d + [\"city\"]].dropna().copy()\n",
+    "\n",
+    "fig = px.scatter_3d(\n",
+    "    df3d,\n",
+    "    x=\"area\",\n",
+    "    y=\"area_rate\",\n",
+    "    z=\"rent\",\n",
+    "    color=\"city\",                     # remove this line if you want single-color points\n",
+    "    opacity=0.5,\n",
+    "    title=\"3D View: Area vs Area Rate vs Rent\",\n",
+    ")\n",
+    "\n",
+    "fig.update_layout(\n",
+    "    scene=dict(\n",
+    "        xaxis_title=\"Area (sqft)\",\n",
+    "        yaxis_title=\"Area Rate\",\n",
+    "        zaxis_title=\"Monthly Rent (₹)\",\n",
+    "    ),\n",
+    "    margin=dict(l=0, r=0, b=0, t=40),\n",
+    ")\n",
+    "\n",
+    "fig.show()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "32b3a896",
+   "metadata": {},
+   "source": [
+    "> **Inference**\n",
+    "> - Listings with similar area can have very different rent if the area rate differs.\n",
+    "> - This supports why both `area` and `area_rate` can be useful features."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "4f2a5976",
    "metadata": {},
    "source": [
@@ -553,15 +629,28 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "top_cities = df[\"city\"].value_counts().head(12)\n",
+    "top_cities = (\n",
+    "    df[\"city\"]\n",
+    "    .value_counts()\n",
+    "    .head(12)\n",
+    "    .reset_index()\n",
+    ")\n",
+    "top_cities.columns = [\"city\", \"count\"]\n",
     "\n",
     "plt.figure(figsize=(11, 5.5))\n",
-    "sns.barplot(x=top_cities.index, y=top_cities.values, palette=\"viridis\")\n",
+    "sns.barplot(\n",
+    "    data=top_cities,\n",
+    "    x=\"city\",\n",
+    "    y=\"count\",\n",
+    "    hue=\"city\",\n",
+    "    palette=\"viridis\",\n",
+    "    legend=False\n",
+    ")\n",
     "plt.title(\"Top Cities by Listing Count\")\n",
     "plt.xlabel(\"City\")\n",
     "plt.ylabel(\"Number of Listings\")\n",
     "plt.xticks(rotation=25, ha=\"right\")\n",
-    "plt.show()"
+    "plt.show()\n"
    ]
   },
   {
@@ -582,12 +671,19 @@
    "outputs": [],
    "source": [
     "plt.figure(figsize=(8.5, 5))\n",
-    "sns.countplot(data=df, x=\"furnishing\", order=df[\"furnishing\"].value_counts().index, palette=\"Set2\")\n",
+    "sns.countplot(\n",
+    "    data=df,\n",
+    "    x=\"furnishing\",\n",
+    "    hue=\"furnishing\",     # explicit hue\n",
+    "    order=df[\"furnishing\"].value_counts().index,\n",
+    "    palette=\"Set2\",\n",
+    "    legend=False\n",
+    ")\n",
     "plt.title(\"Furnishing Distribution\")\n",
     "plt.xlabel(\"Furnishing\")\n",
     "plt.ylabel(\"Count\")\n",
     "plt.xticks(rotation=15, ha=\"right\")\n",
-    "plt.show()"
+    "plt.show()\n"
    ]
   },
   {
@@ -622,7 +718,7 @@
     "df_top = df[df[\"city\"].isin(top_city_names)].copy()\n",
     "\n",
     "plt.figure(figsize=(12, 6))\n",
-    "sns.boxplot(data=df_top, x=\"city\", y=\"rent\", palette=\"pastel\", showfliers=False)\n",
+    "sns.boxplot(data=df_top, x=\"city\", y=\"rent\", hue=\"city\", palette=\"pastel\", showfliers=False, legend=False)\n",
     "plt.gca().yaxis.set_major_formatter(inr_formatter)\n",
     "plt.title(\"Rent Distribution by City (Top 8 Cities)\")\n",
     "plt.xlabel(\"City\")\n",
@@ -650,28 +746,6 @@
     "\n",
     "Before we model, we write down a few observations from the charts.\n",
     "This keeps the workflow realistic: **EDA should influence decisions**."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "dceaef3b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Missingness percentage (top)\n",
-    "import pandas as pd\n",
-    "from IPython.display import display\n",
-    "\n",
-    "missing_pct = (df.isna().mean() * 100).sort_values(ascending=False).reset_index()\n",
-    "missing_pct.columns = [\"column\", \"missing_%\"]\n",
-    "\n",
-    "display(\n",
-    "    missing_pct.head(12).style\n",
-    "        .format({\"missing_%\": \"{:.2f}%\"})\n",
-    "        .bar(subset=[\"missing_%\"], align=\"mid\")\n",
-    "        .set_caption(\"Missingness percentage (top columns)\")\n",
-    ")\n"
    ]
   },
   {
@@ -913,8 +987,8 @@
     "def cv_rmse_scores(model, X, y):\n",
     "    from sklearn.pipeline import Pipeline\n",
     "    pipe = Pipeline(steps=[(\"preprocess\", preprocess), (\"model\", model)])\n",
-    "    scores = cross_val_score(pipe, X, y, cv=cv, scoring=\"neg_root_mean_squared_error\")\n",
-    "    return -scores  # convert to positive RMSE\n",
+    "    scores = cross_val_score(pipe, X, y, cv=cv, scoring=\"neg_mean_absolute_error\")\n",
+    "    return -scores  # convert to positive MAE\n",
     "\n",
     "cv_scores = {name: cv_rmse_scores(model, X_train_sel, y_train) for name, model in candidates.items()}\n",
     "cv_scores"
@@ -940,8 +1014,8 @@
    "source": [
     "plt.figure(figsize=(11, 6))\n",
     "sns.boxplot(data=pd.DataFrame(cv_scores), palette=\"Set3\")\n",
-    "plt.title(\"Cross-Validation RMSE by Model (Train Set)\")\n",
-    "plt.ylabel(\"RMSE\")\n",
+    "plt.title(\"Cross-Validation MAE by Model (Train Set)\")\n",
+    "plt.ylabel(\"MAE\")\n",
     "plt.show()\n",
     "\n",
     "[(k, float(np.mean(v)), float(np.std(v))) for k, v in cv_scores.items()]"
@@ -976,26 +1050,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.metrics import mean_squared_error, r2_score\n",
+    "from sklearn.metrics import mean_absolute_error, r2_score\n",
     "\n",
     "def train_and_eval(model, X_tr, y_tr, X_eval, y_eval):\n",
     "    from sklearn.pipeline import Pipeline\n",
     "    pipe = Pipeline(steps=[(\"preprocess\", preprocess), (\"model\", model)])\n",
     "    pipe.fit(X_tr, y_tr)\n",
     "    preds = pipe.predict(X_eval)\n",
-    "    rmse = float(np.sqrt(mean_squared_error(y_eval, preds)))\n",
+    "    mae = float(mean_absolute_error(y_eval, preds))\n",
     "    r2 = float(r2_score(y_eval, preds))\n",
-    "    return pipe, preds, rmse, r2\n",
+    "    return pipe, preds, mae, r2\n",
     "\n",
     "val_results = []\n",
     "val_preds = {}\n",
     "trained = {}\n",
     "\n",
     "for name, model in candidates.items():\n",
-    "    pipe, preds, rmse, r2 = train_and_eval(model, X_train_sel, y_train, X_val_sel, y_val)\n",
+    "    pipe, preds, mae, r2 = train_and_eval(model, X_train_sel, y_train, X_val_sel, y_val)\n",
     "    trained[name] = pipe\n",
     "    val_preds[name] = preds\n",
-    "    val_results.append((name, rmse, r2))\n",
+    "    val_results.append((name, mae, r2))\n",
     "\n",
     "sorted(val_results, key=lambda x: x[1])"
    ]
@@ -1101,7 +1175,7 @@
     "\n",
     "test_preds = final_pipe.predict(X_test_sel)\n",
     "\n",
-    "test_rmse = float(np.sqrt(mean_squared_error(y_test, test_preds)))\n",
+    "test_rmse = float(mean_absolute_error(y_test, test_preds))\n",
     "test_r2 = float(r2_score(y_test, test_preds))\n",
     "\n",
     "test_rmse, test_r2"
@@ -1212,7 +1286,7 @@
     "    city_mae = errors.groupby(\"city\")[\"abs_error\"].mean().sort_values(ascending=False)\n",
     "\n",
     "    plt.figure(figsize=(10.5, 5.5))\n",
-    "    sns.barplot(x=city_mae.index[:10], y=city_mae.values[:10], palette=\"magma\")\n",
+    "    sns.barplot(x=city_mae.index[:10], y=city_mae.values[:10], hue=city_mae.index[:10], palette=\"magma\", legend=False)\n",
     "    plt.gca().yaxis.set_major_formatter(inr_formatter)\n",
     "    plt.title(\"Average Absolute Error by City (Top 10) — Test Set\")\n",
     "    plt.xlabel(\"City\")\n",
