--- a/regression/end_to_end_indian_house_rent_regression.ipynb
+++ b/regression/end_to_end_indian_house_rent_regression.ipynb
@@ -5,19 +5,76 @@
    "id": "5b7f5f41",
    "metadata": {},
    "source": [
-    "# City House Rent Prediction (India) — End-to-End Regression Project\n",
+    "# End-to-End Regression Project using Indian Rental Data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "99eec37a-0bcb-45f7-85b9-0eced4e3f00a",
+   "metadata": {},
+   "source": [
+    "## 📘 Regression: Problem Overview\n",
     "\n",
-    "We will build a model that predicts **monthly rent (₹)** from rental listing attributes.\n",
+    "### What is Regression?\n",
     "\n",
-    "This notebook is written like a real ML project notebook:\n",
-    "- short code cells\n",
-    "- clear narration\n",
-    "- **inference after key outputs**\n",
-    "- train / validation / test split\n",
-    "- cross-validation for model comparison\n",
-    "- pipelines for preprocessing\n",
+    "**Regression** is a machine learning task where we predict a **continuous numeric value** from input features.\n",
     "\n",
-    "We keep the math light. We focus on decisions and interpretation."
+    "Common regression problems include:\n",
+    "\n",
+    "* 🏠 House price / rental prediction\n",
+    "* 💼 Salary prediction\n",
+    "* 📈 Sales or demand estimation\n",
+    "* ⚡ Energy or cost estimation\n",
+    "\n",
+    "All of these involve predicting a **numeric value**, not a category.\n",
+    "\n",
+    "### Type of Learning: Supervised\n",
+    "\n",
+    "This is a **supervised learning** problem.\n",
+    "\n",
+    "* We are given **input features (X)**\n",
+    "* We are given the **correct output (y)**\n",
+    "* The model learns the relationship between them from **labeled training data**\n",
+    "\n",
+    "In this notebook:\n",
+    "\n",
+    "* **Inputs:** house attributes (area, city, bedrooms, furnishing, etc.)\n",
+    "* **Target:** monthly rent\n",
+    "\n",
+    "### Dataset Used\n",
+    "\n",
+    "* Based on a **MagicBricks rental listings dataset (India)** [Kaggle Dataset Link](https://www.kaggle.com/datasets/pranayjagtap06/indian-rental-housing-price-dataset)\n",
+    "* Slightly **modified for teaching purposes**\n",
+    "\n",
+    "  * to demonstrate preprocessing\n",
+    "  * to handle missing values\n",
+    "  * to build clean end-to-end pipelines\n",
+    "\n",
+    "### What We’ll Do in This Notebook\n",
+    "\n",
+    "We will walk through a **complete regression workflow**:\n",
+    "\n",
+    "1. Understand and explore the data\n",
+    "2. Prepare features and handle missing values\n",
+    "3. Split data into train / validation / test\n",
+    "4. Build and compare regression models\n",
+    "5. Evaluate on unseen test data\n",
+    "\n",
+    "The goal is to understand **how regression is applied end to end in practice**, not just to train a model.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7d9bd11b-2feb-48b3-aeb3-c5f3d48f807d",
+   "metadata": {},
+   "source": [
+    "## 0) Setup\n",
+    "\n",
+    "* Detailed setup instructions are available in the **README** of the repository\n",
+    "* **Download the dataset** and place it inside the `data/` folder\n",
+    "* This project uses **uv** for environment and dependency management\n",
+    "* Clone the repo and follow the README — all required libraries (pandas, scikit-learn, matplotlib, etc.) will be installed automatically\n",
+    "Once setup is complete, you’re ready to run this notebook end to end.\n"
    ]
   },
   {
